# LinkedInArticles

./: .gitignore  Dockerfile  LICENSE  README.md  build-dev.sh  configure.sh  dev-container.sh  dev.conf.example  entrypoint.sh  install-docker.sh
0001_basic_fastapi/: .gitignore  0001_fastapi.md  ai.md  gen_certs_legacy.sh  main.py
0002_docker_dev_environment/: .gitignore  Dockerfile  README.md  install-docker.sh
articles/0001_basic_fastapi/: .gitignore  README.md  gen_certs.sh  manual_ws_client.py  requirements.txt  test_http.py  test_websockets.py
articles/0002_docker_dev_environment/: README.md  ai.md  dev-container.sh  entrypoint.sh
articles/0003_html_css_javascript_article_viewer/: README.md  ai.md  playwright-install.sh  server.py  test_e2e.py  test_server.py
articles/0003_html_css_javascript_article_viewer/static/: app.js  style.css
articles/0003_html_css_javascript_article_viewer/templates/: index.html
articles/0004_std_lib_http_client/: .gitignore  CMakeLists.txt  README.md  install-system-dependencies.sh  run-benchmarks.sh  run-coverage.sh  setup.sh
articles/0004_std_lib_http_client/benchmark/: CMakeLists.txt
articles/0004_std_lib_http_client/benchmark/clients/c/: httpc_client.c  libcurl_client.c
articles/0004_std_lib_http_client/benchmark/clients/cpp/: boost_client.cpp  httpcpp_client.cpp
articles/0004_std_lib_http_client/benchmark/clients/python/: httppy_client.py  requests_client.py
articles/0004_std_lib_http_client/benchmark/data_generator/: main.cpp
articles/0004_std_lib_http_client/benchmark/server/: main.cpp
articles/0004_std_lib_http_client/include/httpc/: error.h  growable_buffer.h  http1_protocol.h  http_protocol.h  httpc.h  syscalls.h  tcp_transport.h  transport.h  unix_transport.h
articles/0004_std_lib_http_client/include/httpcpp/: error.hpp  http1_protocol.hpp  http_protocol.hpp  httpcpp.hpp  tcp_transport.hpp  transport.hpp  unix_transport.hpp
articles/0004_std_lib_http_client/src/c/: CMakeLists.txt  http1_protocol.c  http_protocol.c  httpc.c  lib.c  syscalls.c  tcp_transport.c  unix_transport.c
articles/0004_std_lib_http_client/src/cpp/: CMakeLists.txt  http1_protocol.cpp  lib.cpp  main.cpp  tcp_transport.cpp  unix_transport.cpp
articles/0004_std_lib_http_client/src/python/: pyproject.toml  requirements.txt
articles/0004_std_lib_http_client/src/python/httppy/: errors.py  http1_protocol.py  http_protocol.py  httppy.py  tcp_transport.py  transport.py  unix_transport.py
articles/0004_std_lib_http_client/src/python/tests/: test_http1_protocol.py  test_httppy.py  test_tcp_transport.py  test_unix_transport.py
articles/0004_std_lib_http_client/src/rust/: Cargo.toml
articles/0004_std_lib_http_client/src/rust/src/: error.rs  http1_protocol.rs  http_protocol.rs  httprust.rs  lib.rs  main.rs  tcp_transport.rs  transport.rs  unix_transport.rs
articles/0004_std_lib_http_client/tests/: CMakeLists.txt  test_main.cpp
articles/0004_std_lib_http_client/tests/c/: test_http1_protocol.cpp  test_httpc.cpp  test_syscalls.cpp  test_tcp_transport.cpp  test_unix_transport.cpp
articles/0004_std_lib_http_client/tests/cpp/: test_http1_protocol.cpp  test_httpcpp.cpp  test_tcp_transport.cpp  test_unix_transport.cpp
viewer/: requirements.txt  server.py
